--- a/content/1-history/2.md
+++ b/content/1-history/2.md
@@ -31,23 +31,35 @@ The aim of this paper is to revisit some key concepts in the time-dependent mech
 
 #### *Stress-strain curves*
 
-A stress-strain curve is derived from a simple tensile test, and it is often used to characterize the mechanical properties of painting materials. Force and displacement measurements are converted to stress and strain in order to remove the effects of sample geometry. The initial slope of a stress-strain curve in uniaxial tension is a measure of stiffness called the modulus of elasticity, *E*, or Young’s modulus. Experiments in shear mode define the shear modulus, while hydrostatic pressure gives the bulk modulus. For a viscoelastic material, these elastic moduli are time dependent, and the stress-strain relationship is nonlinear due to polymer relaxation during the test. [**Fig. 2.1**](fig-2-1) shows stress-strain curves from a series of tensile tests performed on free films of an artist’s oil paint. The results highlight that the modulus decreases with higher temperature and reduced rate of deformation, while the failure strain increases. Despite this trend, there is no simple relationship between stiffness and failure strain for materials in general. A material may be stiff and brittle or compliant and brittle.
+A stress-strain curve is derived from a simple tensile test, and it is often used to characterize the mechanical properties of painting materials. Force and displacement measurements are converted to stress and strain in order to remove the effects of sample geometry. The initial slope of a stress-strain curve in uniaxial tension is a measure of stiffness called the modulus of elasticity, *E*, or Young’s modulus. Experiments in shear mode define the shear modulus, while hydrostatic pressure gives the bulk modulus. For a viscoelastic material, these elastic moduli are time dependent, and the stress-strain relationship is nonlinear due to polymer relaxation during the test. ([fig. 2.1](#fig-2-1)) shows stress-strain curves from a series of tensile tests performed on free films of an artist’s oil paint. The results highlight that the modulus decreases with higher temperature and reduced rate of deformation, while the failure strain increases. Despite this trend, there is no simple relationship between stiffness and failure strain for materials in general. A material may be stiff and brittle or compliant and brittle.
 
-[**Fig. 2.2**](fig-2-2) illustrates the results of a tensile test with the time dimension added. The first graph ([**fig. 2.2a**](fig-2-2)) shows the strain history as millistrain versus time, and indicates that the strain rate, *R*, is constant during the constant speed test due to the low failure strain. At higher strains, the strain rate would measurably decrease during a constant speed test due to the changing length of the sample. The second graph ([**fig. 2.2b**](fig-2-2)) gives stress versus time, and the third ([**fig. 2.2c**](fig-2-2)) presents a stress-strain curve. The latter shows a secant modulus, *E~s~* (at strain ε = 0.005), and the strain at failure ε~f~. Secant modulus can be a useful measure of stiffness due to nonlinearity caused by relaxation during the tensile test.
+{% figure 'fig-2-1' %}
+
+([fig. 2.2](#fig-2-2)) illustrates the results of a tensile test with the time dimension added. The first graph ([fig. 2.2a](#fig-2-2)) shows the strain history as millistrain versus time, and indicates that the strain rate, *R*, is constant during the constant speed test due to the low failure strain. At higher strains, the strain rate would measurably decrease during a constant speed test due to the changing length of the sample. The second graph ([fig. 2.2b](#fig-2-2)) gives stress versus time, and the third ([fig. 2.2c](#fig-2-2)) presents a stress-strain curve. The latter shows a secant modulus, *E~s~* (at strain ε = 0.005), and the strain at failure ε~f~. Secant modulus can be a useful measure of stiffness due to nonlinearity caused by relaxation during the tensile test.
+
+{% figure 'fig-2-2' %}
 
 #### *Stress relaxation*
 
-A relaxation test is another useful experiment for studying time-dependent material properties, and it is particularly relevant to canvas-supported paintings. [**Fig. 2.3**](fig-2-3) illustrates the different parameters in a stress-relaxation test performed on a Winsor and Newton Foundation White film. The first graph ([**fig. 2.3a**](fig-2-3)) shows the strain history as an initial loading ramp, followed by constant strain during measurement of stress relaxation. The second ([**fig. 2.3b**](fig-2-3)) shows the loading ramp on a stress-strain curve, and a vertical drop in stress during the constant strain segment. **[Fig. 2.3c](fig-2-3)** gives the stress relaxation process on a plot of stress versus time, where it appears that stress is approaching equilibration after a sharp initial drop. The final plot ([**fig. 2.3d**](fig-2-3)) shows the same data on a log-log scale, and highlights that the sample is still relaxing. The results also show similar findings for a repeat test that was performed on the same sample after a twenty-four-hour recovery period. During cyclic load testing on viscoelastic materials, it is important to consider strain history and its effects on repeated measurements.
+A relaxation test is another useful experiment for studying time-dependent material properties, and it is particularly relevant to canvas-supported paintings. ([fig. 2.3](#fig-2-3)) illustrates the different parameters in a stress-relaxation test performed on a Winsor and Newton Foundation White film. The first graph ([fig. 2.3a](#fig-2-3)) shows the strain history as an initial loading ramp, followed by constant strain during measurement of stress relaxation. The second ([fig. 2.3b](#fig-2-3)) shows the loading ramp on a stress-strain curve, and a vertical drop in stress during the constant strain segment. ([fig. 2.3c](#fig-2-3)) gives the stress relaxation process on a plot of stress versus time, where it appears that stress is approaching equilibration after a sharp initial drop. The final plot ([fig. 2.3d](#fig-2-3)) shows the same data on a log-log scale, and highlights that the sample is still relaxing. The results also show similar findings for a repeat test that was performed on the same sample after a twenty-four-hour recovery period. During cyclic load testing on viscoelastic materials, it is important to consider strain history and its effects on repeated measurements.
 
-The stress-relaxation test method outlined in [**fig. 2.3**](fig-2-3) is the approach used in the CCI Lining Project to investigate the effects of different lining treatments for paintings on canvas ([[Michalski and Daly Hartin 1996]]). From recent work, [**fig. 2.4**](fig-2-4) shows a plot of tension (kN/m) versus time after a fixed strain was applied to each sample ([[Daly Hartin et al. 2011]]). The initial sharp spike is caused by the rapid initial strain (see [**figs. 2.3b and c**](fig-2-3)), which is followed by a quick decay in tension due to stress relaxation. The model painting with a linen lining shows no difference from the model painting (unlined) over the measurement time scale. The sailcloth lining causes a uniform vertical shift in tension due to the stiffness of the fabric, which is constant over the sixty-hour period. An advantage of the sailcloth lining is that its stiffness allows for a stable increase in tension, with less strain imposed on the painting. In fact, the strain could be reduced to roughly half and still maintain a similar tension to the model painting in the experimental time scale. The wax resin lining also shows a strong vertical shift due to the wax stiffness; however, it also exhibits relaxation characteristics.
+{% figure 'fig-2-3' %}
 
-The addition of relative humidity (RH) fluctuations in [**fig. 2.4**](fig-2-4) highlights some further trends in the lined painting response. Sailcloth and linen have no effect on the response of the painting, since the linings do not constrain the paint layers in the direction of applied tension—that is, painting and lining are free to shift across one another. In contrast, the wax lining impregnates the canvas and constrains the paint layers from shrinking or swelling due to contact with the supporting layers of the painting. The paint layers still respond to RH fluctuations; however, the wax adds surface constraint that prevents movement and a subsequent change in tension measured at the ends of the sample. A more in-depth discussion of the CCI Lining Project is provided by Daly Hartin and colleagues ([[Daly Hartin et al. 2011]]); therefore, the following discussion provides more general information regarding the viscoelastic behavior of painting materials.
+The stress-relaxation test method outlined in ([fig. 2.4](#fig-2-4)) is the approach used in the CCI Lining Project to investigate the effects of different lining treatments for paintings on canvas ([[Michalski and Daly Hartin 1996]]). From recent work, ([fig. 2.4](#fig-2-4)) shows a plot of tension (kN/m) versus time after a fixed strain was applied to each sample ([[Daly Hartin et al. 2011]]). The initial sharp spike is caused by the rapid initial strain (see ([fig. 2.3b and c](#fig-2-3)), which is followed by a quick decay in tension due to stress relaxation. The model painting with a linen lining shows no difference from the model painting (unlined) over the measurement time scale. The sailcloth lining causes a uniform vertical shift in tension due to the stiffness of the fabric, which is constant over the sixty-hour period. An advantage of the sailcloth lining is that its stiffness allows for a stable increase in tension, with less strain imposed on the painting. In fact, the strain could be reduced to roughly half and still maintain a similar tension to the model painting in the experimental time scale. The wax resin lining also shows a strong vertical shift due to the wax stiffness; however, it also exhibits relaxation characteristics.
+
+{% figure 'fig-2-4' %}
+
+The addition of relative humidity (RH) fluctuations in ([fig. 2.4](#fig-2-4)) highlights some further trends in the lined painting response. Sailcloth and linen have no effect on the response of the painting, since the linings do not constrain the paint layers in the direction of applied tension—that is, painting and lining are free to shift across one another. In contrast, the wax lining impregnates the canvas and constrains the paint layers from shrinking or swelling due to contact with the supporting layers of the painting. The paint layers still respond to RH fluctuations; however, the wax adds surface constraint that prevents movement and a subsequent change in tension measured at the ends of the sample. A more in-depth discussion of the CCI Lining Project is provided by Daly Hartin and colleagues ([[Daly Hartin et al. 2011]]); therefore, the following discussion provides more general information regarding the viscoelastic behavior of painting materials.
 
 #### *Time-temperature superposition*
 
-Over a wide range of test conditions, it is impractical to summarize tensile data from a viscoelastic material with stress-strain curves. It is also not feasible to measure the full relaxation behavior from glassy to rubbery—a process occurring over many decades—at one temperature, due to equipment limitations and time constraints. In [**fig. 2.1**](fig-2-1), it is clear that a relationship exists between strain rate and temperature, since increasing the rate by an order of magnitude is equivalent to decreasing temperature by 10°C. This implies that time-temperature superposition (TTS) is a potential tool for efficiently summarizing data ({Williams, Landel, and Ferry 1955}). To illustrate this method, [**fig. 2.5a**](fig-2-5) shows a simplified summary of modulus values at three temperatures and four strain rates within a practical test window. This test window is bounded by equipment limitations and practical time available for data collection. [**Fig. 2.5b**](fig-2-5) shows the result of fixing data at a chosen reference temperature, *T~ref~* = 20°C, and horizontally shifting data at the other temperatures to line up as a single master curve. The result shows a shift from glassy to rubbery behavior over a broader scale than the experiments allowed in direct measurement. Tabulated results of the horizontal shift factor versus temperature allow one to create a master curve at any *T~ref~* of interest within data limits. Defining *T~ref~* at the glass transition temperature, *T~g~*, would also allow comparison with theoretical functions, and possible extrapolation to temperatures beyond the test conditions. There are many reasons why the simple TTS method may not work for certain materials; however, it is a powerful tool when it does.
+Over a wide range of test conditions, it is impractical to summarize tensile data from a viscoelastic material with stress-strain curves. It is also not feasible to measure the full relaxation behavior from glassy to rubbery—a process occurring over many decades—at one temperature, due to equipment limitations and time constraints. In ([fig. 2.1](#fig-2-1)), it is clear that a relationship exists between strain rate and temperature, since increasing the rate by an order of magnitude is equivalent to decreasing temperature by 10°C. This implies that time-temperature superposition (TTS) is a potential tool for efficiently summarizing data ({Williams, Landel, and Ferry 1955}). To illustrate this method, ([fig. 2.5a](#fig-2-5)) shows a simplified summary of modulus values at three temperatures and four strain rates within a practical test window. This test window is bounded by equipment limitations and practical time available for data collection. ([fig. 2.5b](#fig-2-5)) shows the result of fixing data at a chosen reference temperature, *T~ref~* = 20°C, and horizontally shifting data at the other temperatures to line up as a single master curve. The result shows a shift from glassy to rubbery behavior over a broader scale than the experiments allowed in direct measurement. Tabulated results of the horizontal shift factor versus temperature allow one to create a master curve at any *T~ref~* of interest within data limits. Defining *T~ref~* at the glass transition temperature, *T~g~*, would also allow comparison with theoretical functions, and possible extrapolation to temperatures beyond the test conditions. There are many reasons why the simple TTS method may not work for certain materials; however, it is a powerful tool when it does.
 
-It is helpful to consider practical situations where the viscoelastic properties are of importance. As a simple example, [**fig. 2.6a**](fig-2-6) shows a schematic of a broken and curled flake of paint that is deformed back into the plane of the painting. The radius of curvature (*r*) and film thickness (*h*) are labeled simply to highlight that it is possible to estimate the strain rate from a few parameters and define the time scale of the applied deformation. Rolling or unrolling a canvas painting is another similar and geometrically simple example. In [**fig. 2.6b**](fig-2-6), the stiffness reduction caused by decreasing the rate of deformation is shown as the path from point A to point B along the master curve. In contrast, path A→C indicates the effect of keeping the same strain rate but using higher temperature to shift the master curve horizontally. The higher temperature accelerates the polymer relaxation and leads to a lower stiffness at a given strain rate. The horizontal shift may also be caused by a plasticizing effect, such as an increase in moisture content ([[Maksimov, Mochalov, and Urzhumtsev 1972]]). Path A→D shows a final example from the combined effect of decreasing the rate of deformation while also increasing temperature. Care should, of course, be taken when increasing temperature and moisture content, since extremes may cause unwanted effects beyond the simple relaxation process described here.
+{% figure 'fig-2-5' %}
+
+It is helpful to consider practical situations where the viscoelastic properties are of importance. As a simple example, ([fig. 2.6a](#fig-2-6)) shows a schematic of a broken and curled flake of paint that is deformed back into the plane of the painting. The radius of curvature (*r*) and film thickness (*h*) are labeled simply to highlight that it is possible to estimate the strain rate from a few parameters and define the time scale of the applied deformation. Rolling or unrolling a canvas painting is another similar and geometrically simple example. In ([fig. 2.6b](#fig-2-6)), the stiffness reduction caused by decreasing the rate of deformation is shown as the path from point A to point B along the master curve. In contrast, path A→C indicates the effect of keeping the same strain rate but using higher temperature to shift the master curve horizontally. The higher temperature accelerates the polymer relaxation and leads to a lower stiffness at a given strain rate. The horizontal shift may also be caused by a plasticizing effect, such as an increase in moisture content ([[Maksimov, Mochalov, and Urzhumtsev 1972]]). Path A→D shows a final example from the combined effect of decreasing the rate of deformation while also increasing temperature. Care should, of course, be taken when increasing temperature and moisture content, since extremes may cause unwanted effects beyond the simple relaxation process described here.
+
+{% figure 'fig-2-6' %}
 
 The concepts discussed in this section are often studied using a technique called dynamic mechanical analysis (DMA) ([[Nielsen and Landel 1994]]). This can rapidly give modulus data as a function of temperature and frequency using a single sample, and also show transition regions. Experiments involving tensile tests are typically used when the large-strain response, or failure properties, are of interest.
 
@@ -57,9 +69,13 @@ The purpose of using tensile test data in studies of artists paints is due to th
 
 > The ultimate tensile properties (the stress at break σ~b~, and the corresponding extension ratio λ~b~) vary markedly with the temperature and with the stress-time or strain-time history prior to rupture. Considerable evidence indicates that data obtained at different temperatures can often be superposed to give master curves which show the variation of σ~b~ and λ~b~ over many decades of time at a fixed temperature. Further, the temperature shift factor is the same—or nearly the same—as that used to superpose viscoelastic data representing small-deformation behavior. In other words, the same molecular parameters which influence chain mobility, thus the time and temperature dependence of linear viscoelastic response, also have a controlling effect on the time and temperature dependence of the ultimate tensile properties. ([[Smith 1965, 275]])
 
-Recent studies on artists paints have highlighted the application of this approach for generating master curves of failure strains from tensile data. [**Fig. 2.7a**](fig-2-7) shows a generalized illustration of a failure envelope created using a similar approach to that shown for modulus data (see [**fig. 2.5**](fig-2-5)). The path to point A results in failure before reaching the target strain at the defined strain rate. Reducing the strain rate avoids failure for the path to point B, which is outside of the failure envelope. [**Fig. 2.7b**](fig-2-7) shows the path to point C outside of the failure envelope due to a horizontal shift of the master curve from a temperature increase or possibly a plasticizing effect (e.g., increased moisture content). Combining higher temperature and reduced strain rate locates point D even further from the failure line.
+Recent studies on artists paints have highlighted the application of this approach for generating master curves of failure strains from tensile data. ([fig. 2.7a](#fig-2-7)) shows a generalized illustration of a failure envelope created using a similar approach to that shown for modulus data (see ([fig. 2.5](#fig-2-5))). The path to point A results in failure before reaching the target strain at the defined strain rate. Reducing the strain rate avoids failure for the path to point B, which is outside of the failure envelope. ([fig. 2.7b](#fig-2-7)) shows the path to point C outside of the failure envelope due to a horizontal shift of the master curve from a temperature increase or possibly a plasticizing effect (e.g., increased moisture content). Combining higher temperature and reduced strain rate locates point D even further from the failure line.
 
-This concept of a failure strain mastercurve is also shown in figure 2.8 using tensile data from two artists paint films at *T~ref~* = 20°C ({Hagan 2017}). The acrylic paint film ([**fig. 2.8a**](fig-2-8)) shows a considerably larger combination of strains and strain rates that avoid failure compared to the oil paint ([**fig. 2.8b**](fig-2-8)). This illustrates why cracking of acrylics latex paints is much less common than traditional oils over a wide range of conditions.
+{% figure 'fig-2-7' %}
+
+This concept of a failure strain mastercurve is also shown in figure 2.8 using tensile data from two artists paint films at *T~ref~* = 20°C ({Hagan 2017}). The acrylic paint film ([fig. 2.8a](#fig-2-8)) shows a considerably larger combination of strains and strain rates that avoid failure compared to the oil paint ([fig. 2.8b](#fig-2-8)). This illustrates why cracking of acrylics latex paints is much less common than traditional oils over a wide range of conditions.
+
+{% figure 'fig-2-8' %}
 
 ## Conclusions
 
