--- a/content/8-posters/49.md
+++ b/content/8-posters/49.md
@@ -32,11 +32,15 @@ abstract: "Evolon CR, an absorbent fabric composed of polyester and polyamide mi
 
 ## Introduction
 
-Despite the successful use of Evolon CR (a nonwoven tissue made of a polyester and polyamide blend[^1]) in removing overpaint and varnish ([[Ribits 2017]]), little research has been done on its ability to poultice wax-resin mixtures. Confronted with two wax-resin-lined paintings that required relining, the authors sought a method that would achieve a homogeneous surface topography and remove residual wax-resin mixtures on the verso. The successful reduction of wax-resin mixtures ([**fig. 49.1a**](fig-49-1a)) prompted further research into the efficacy of this method and into the constituent materials poulticed into and onto the Evolon CR tissue. The goals of this study were to better understand the chemical and physical properties of Evolon CR and to evaluate the tissue’s efficacy at reducing wax-resin mixtures in an effort to improve and expand its practical use in conservation.
+Despite the successful use of Evolon CR (a nonwoven tissue made of a polyester and polyamide blend[^1]) in removing overpaint and varnish ([[Ribits 2017]]), little research has been done on its ability to poultice wax-resin mixtures. Confronted with two wax-resin-lined paintings that required relining, the authors sought a method that would achieve a homogeneous surface topography and remove residual wax-resin mixtures on the verso. The successful reduction of wax-resin mixtures ([fig. 49.1a](#fig-49-1-a)) prompted further research into the efficacy of this method and into the constituent materials poulticed into and onto the Evolon CR tissue. The goals of this study were to better understand the chemical and physical properties of Evolon CR and to evaluate the tissue’s efficacy at reducing wax-resin mixtures in an effort to improve and expand its practical use in conservation.
+
+{% figure 'fig-49-1-a' %}
 
 ## Experimental Design
 
-Fragments of twentieth-century study collection paintings, previously wax lined by students with a 2:1 microcrystalline wax: Piccolyte resin, were used for this study. Following the removal of the old lining with heat, the adhesive mixture on the verso of the canvases was reduced using the following procedure (unless otherwise noted): Evolon CR squares measuring 2 inches (all weighing 0.18 g ±0.001 g) were placed onto the verso of the painting and then wetted with 1 mL of petroleum benzine, delivered by Eppendorf 1000 uL pipette. They were then covered with Mylar and left for varying lengths of dwell time (**figs. [49.1b](fig-49-1), [49.1c](fig-49-1)**).
+Fragments of twentieth-century study collection paintings, previously wax lined by students with a 2:1 microcrystalline wax: Piccolyte resin, were used for this study. Following the removal of the old lining with heat, the adhesive mixture on the verso of the canvases was reduced using the following procedure (unless otherwise noted): Evolon CR squares measuring 2 inches (all weighing 0.18 g ±0.001 g) were placed onto the verso of the painting and then wetted with 1 mL of petroleum benzine, delivered by Eppendorf 1000 uL pipette. They were then covered with Mylar and left for varying lengths of dwell time ([figs. 49.1b](#fig-49-1-b), [49.1c](#fig-49-1-c)).
+
+{% figuregroup '2' 'fig-49-1-b, fig-49-1-c' %}
 
 Four experiments were conducted to evaluate solvent dwell time on the surface, the potential to reuse the tissue, different application methods, and the solvent delivered with Evolon CR.
 
@@ -80,25 +84,37 @@ The first three experiments aimed to understand the practical features of Evolon
 
 ## Dwell Time
 
-Differences in the amount of material poulticed nearly doubles when the tissue is left to dwell for five minutes compared to one minute ([**fig. 49.2**](fig-49-2)). However, an extra ten-minute dwell only yielded an additional 11% increase in poulticed material. These results support that poulticing capacity decreases as the tissue approaches its saturation point. The fifteen-minute time point, representing an extreme scenario, was tested to understand the length of time it would take for the tissue to approach saturation. In practice, the ideal dwell time should be tested for each particular case.
+Differences in the amount of material poulticed nearly doubles when the tissue is left to dwell for five minutes compared to one minute ([fig. 49.2](#fig-49-2)). However, an extra ten-minute dwell only yielded an additional 11% increase in poulticed material. These results support that poulticing capacity decreases as the tissue approaches its saturation point. The fifteen-minute time point, representing an extreme scenario, was tested to understand the length of time it would take for the tissue to approach saturation. In practice, the ideal dwell time should be tested for each particular case.
+
+{% figure 'fig-49-2' %}
 
 ## Single- vs. Double-Layer Application
 
-The use of a two-layer application proved less effective at poulticing material into the tissue compared to using a single sheet of Evolon CR ([**table 49.1**](table-49-1)). Wetted single-layer tissues consistently poulticed more material compared to both wetted tissues only and the combined wet and dry tissues from the Double Layer experiment. A possible explanation is that the dry tissue wicks solvent out of the wet tissue, reducing the amount of solvent delivered to the wax-resin mixture.
+The use of a two-layer application proved less effective at poulticing material into the tissue compared to using a single sheet of Evolon CR [table 49.1](#table-49-1). Wetted single-layer tissues consistently poulticed more material compared to both wetted tissues only and the combined wet and dry tissues from the Double Layer experiment. A possible explanation is that the dry tissue wicks solvent out of the wet tissue, reducing the amount of solvent delivered to the wax-resin mixture.
+
+**figure 'table-49-1'**
 
 ## Iterative Use
 
-In addition to assessing the efficacy of wax-resin poulticing through weight gain, this series also used SEM-EDS and BET to gather information regarding physical changes. Each use of the Evolon CR tissue resulted in increased material sorption, albeit with decreased amounts with each iteration ([**fig. 49.3**](fig-49-3)). This trend can be explained using a similar rationale as the decreased weight gain when using excessively long dwell times: as the tissue approaches saturation, its poulticing capacity decreases.
+In addition to assessing the efficacy of wax-resin poulticing through weight gain, this series also used SEM-EDS and BET to gather information regarding physical changes. Each use of the Evolon CR tissue resulted in increased material sorption, albeit with decreased amounts with each iteration ([fig. 49.3](#fig-49-3)). This trend can be explained using a similar rationale as the decreased weight gain when using excessively long dwell times: as the tissue approaches saturation, its poulticing capacity decreases.
 
-SEM images (**figs. [49.4a](fig-49-4), [b](fig-49-4), [c](fig-49-4), and [d](fig-49-4)**) visualized morphology changes on the surface. With each use, the individual fibers become increasingly less distinct, presumably as the wax resin coats and fills the pores. The loss of definition with each use could be attributed to redistribution of the wax resin already poulticed into the tissue upon re-exposure to solvent, the continued filling of tissue interstices with freshly solubilized/softened wax resin, or a combination of both.
+{% figure 'fig-49-3' %}
 
-BET analysis yielded a surprising result ([**fig. 49.5**](fig-49-5)). An increase in measured surface area was observed after the first use, from 0.0982 m^2^/g (unused control) to 0.4315 m^2^/g (after single use). Contrary to the weight gain data and SEM images, both of which confirmed that the tissue had picked up wax resin, BET suggested the porosity increased. However, after the first iteration, BET data trended as expected: with each iterative use, the measured surface area decreased as more wax resin was poulticed into the tissue.
+SEM images ([figs. 49.4a](#fig-49-4-a), [b](#fig-49-4-b), [c](#fig-49-4-c), and [d](#fig-49-4-d)) visualized morphology changes on the surface. With each use, the individual fibers become increasingly less distinct, presumably as the wax resin coats and fills the pores. The loss of definition with each use could be attributed to redistribution of the wax resin already poulticed into the tissue upon re-exposure to solvent, the continued filling of tissue interstices with freshly solubilized/softened wax resin, or a combination of both.
+
+{% figuregroup '2' 'fig-49-4-a, fig-49-4-b, fig-49-4-c, fig-49-4-d' %}
+
+BET analysis yielded a surprising result ([fig. 49.5](#fig-49-5)). An increase in measured surface area was observed after the first use, from 0.0982 m^2^/g (unused control) to 0.4315 m^2^/g (after single use). Contrary to the weight gain data and SEM images, both of which confirmed that the tissue had picked up wax resin, BET suggested the porosity increased. However, after the first iteration, BET data trended as expected: with each iterative use, the measured surface area decreased as more wax resin was poulticed into the tissue.
+
+{% figure 'fig-49-5' %}
 
 While this publication was in preparation, further analysis of the BET data revealed an anomaly. After further discussion with external scientific colleagues, our preliminary data suggests that BET might not be the ideal instrument for analyzing porosity in Evolon CR due to the relatively low porosity of the fibrous tissue compared with materials BET is typically used to analyze. Further research is needed to develop a quantitative method for measuring porosity changes in Evolon CR before and after use.
 
 ## Solvent Studies
 
-The 1:9 mixture of acetone and petroleum benzine gave the largest weight increase, followed by neat petroleum benzine ([**fig. 49.6a**](fig-49-6)). These results demonstrate a clear relationship between the choice of solvent and amount of poulticed material. The 1:9 mixture likely performed best due to acetone’s ability to solubilize resinous components in the wax-resin mixture. As expected, neat acetone resulted in negligible weight gain given its chemical incompatibility with nonpolar, aliphatic compounds. Importantly, this latter result also suggests that the chemical groups making up the Evolon CR (the polyamide and polyester fibers) have minimal effects in poulticing wax resin. The efficacy of poulticing appears to come primarily from solvent choice. Py-GCMS analysis ([**fig. 49.6b**](fig-49-6)) of the poulticed material showed the characteristic Gaussian distribution of hydrocarbon peaks from the wax component. As expected, the wax-based hydrocarbon peaks increased in intensity as the ratio of petroleum benzine to acetone increased.
+The 1:9 mixture of acetone and petroleum benzine gave the largest weight increase, followed by neat petroleum benzine ([fig. 49.6a](#fig-49-6-a)). These results demonstrate a clear relationship between the choice of solvent and amount of poulticed material. The 1:9 mixture likely performed best due to acetone’s ability to solubilize resinous components in the wax-resin mixture. As expected, neat acetone resulted in negligible weight gain given its chemical incompatibility with nonpolar, aliphatic compounds. Importantly, this latter result also suggests that the chemical groups making up the Evolon CR (the polyamide and polyester fibers) have minimal effects in poulticing wax resin. The efficacy of poulticing appears to come primarily from solvent choice. Py-GCMS analysis ([fig. 49.6b](#fig-49-6-b)) of the poulticed material showed the characteristic Gaussian distribution of hydrocarbon peaks from the wax component. As expected, the wax-based hydrocarbon peaks increased in intensity as the ratio of petroleum benzine to acetone increased.
+
+{% figuregroup '2' 'fig-49-6-a, fig-49-6-b' %}
 
 In summary, the results from all experiments indicate that Evolon CR is an effective material for reducing wax resin; however, the tissue alone never resulted in complete removal of the adhesive.
 
